testsuite/tests/typecheck/should_fail/T8450.stderr

T8450.hs:8:7: error:
    • Couldn't match expected type ‘a’ with actual type ‘()’
      ‘a’ is a rigid type variable bound by
        the type signature for:
          run :: forall a. a
        at T8450.hs:7:1-18
    • In the expression: runEffect $ (undefined :: Either a ())
      In an equation for ‘run’:
          run = runEffect $ (undefined :: Either a ())
    • Relevant bindings include run :: a (bound at T8450.hs:8:1)
